--- a/epoch_data.ipynb
+++ b/epoch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,32 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "timesteps = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict = np.load(f'saved_models/Lorentz/timesteps_{timesteps}/epoch_dictionary_Lorentz_10000_20_{timesteps}.npy', allow_pickle = True).item()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timesteps = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = np.load(f'saved_models/Lorentz/timesteps_{timesteps}/epoch_dictionary_corrected_Lorentz_10000_20_{timesteps}.npy', allow_pickle = True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'MLonly': 126, 'x_transformation_0': {'physical': {1000: 23}, 'physical_error': {1000: 9}}}\n"
+      "{'MLonly': [92, 62, 48, 75, 56], 'x_transformation_0': {'physical_error': {60: 165, 80: 220, 100: 249, 120: 156, 140: 174, 175: 27, 200: 11, 300: 8, 500: 13, 700: 14, 1000: 16}}}\n"
      ]
     }
    ],
@@ -46,47 +46,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1000: 23}\n"
+      "[81, 62, 64, 91, 58]\n"
      ]
     }
    ],
    "source": [
-    "print(dict['x_transformation_0']['physical'])"
+    "print(dict['MLonly'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-08-22 15:35:43.869687: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "{60: 144, 80: 53, 100: 69, 120: 30, 140: 44, 175: 13, 200: 45, 300: 41, 500: 9, 700: 11, 1000: 18}\n"
      ]
     }
    ],
    "source": [
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = keras.models.load_model(f'saved_models/Lorentz/timesteps_{timesteps}/x_transformation_0/physical_Lorentz0_c30_10000_20_{timesteps}.keras')"
+    "print(dict['x_transformation_0']['physical_error'])"
    ]
   },
   {
@@ -99,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -113,10 +102,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0b3"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
